# the-pragmatic-haskeller

10-restful/: pragmatic.cabal
10-restful/snaplets/heist/templates/: authorized.tpl  base.tpl  index.tpl
10-restful/src/Pragmatic/: Types.hs
10-restful/src/Pragmatic/Server/: Site.hs
11-actors/: pragmatic.cabal
11-actors/src/: Application.hs  Main.hs  Site.hs
11-actors/src/Pragmatic/Snaplet/: Actors.hs
