Name:                pragmatic
Version:             0.11
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable pragmatic
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    HTTP                                >= 4000.2.8   && < 4000.3,
    MonadCatchIO-transformers           >= 0.2.1   && < 0.4,
    aeson                               >= 0.6.0.1 && < 0.7,
    base                                >= 4       && < 5,
    blaze-html                          >= 0.5.1.3 && < 0.7,
    bytestring                          >= 0.9.1   && < 0.11,
    configurator                        >= 0.2.0.2 && < 0.3,
    digestive-functors                  >= 0.6.0.1 && < 0.7,
    digestive-functors-heist            >= 0.6.0.1 && < 0.7,
    distributed-process                 >= 0.4.2 && < 0.5,
    distributed-process-simplelocalnet  >= 0.2.0.9 && < 0.3,
    heist                               >= 0.11.0.1  && < 0.13,
    mtl                                 >= 2       && < 3,
    snap                                >= 0.10    && < 0.13,
    snap-core                           >= 0.9.3.1   && < 0.10,
    snap-server                         >= 0.9.3.1   && < 0.10,
    snap-loader-static                  >= 0.9.0.1   && < 0.10,
    text                                >= 0.11    && < 0.12,
    time                                >= 1.1     && < 1.5,
    uuid                                >= 1.2.13  && < 1.3,
    snap-extras                         >= 0.6,
    xmlhtml                             >= 0.1   && < 0.3

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.9

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
